--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,30 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-configuration-processor</artifactId>
+      		<version>1.5.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		
+		<dependency>
+ 			<groupId>mysql</groupId>
+ 			<artifactId>mysql-connector-java</artifactId>
+ 			<version>5.1.21</version>
+		</dependency>
+		
+		<dependency>
+ 			<groupId>com.alibaba</groupId>
+ 			<artifactId>druid</artifactId>
+ 			<version>1.0.19</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
