--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,18 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
     show-sql: true
   jackson:
     serialization:
       indent-output: true  
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    mode: LEGACYHTML5
+    encoding: UTF-8
+    content-type: text/html
+    cache: false
+  mvc:
+    favicon:
+      enabled: false
