--- a/pom.xml
+++ b/pom.xml
@@ -55,18 +55,12 @@
 		<dependency>
       		<groupId>org.springframework.boot</groupId>
       		<artifactId>spring-boot-configuration-processor</artifactId>
-      		<version>1.5.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		
-		<dependency>
- 			<groupId>mysql</groupId>
- 			<artifactId>mysql-connector-java</artifactId>
- 			<version>5.1.21</version>
-		</dependency>
 		
 		<dependency>
  			<groupId>com.alibaba</groupId>
@@ -74,7 +68,39 @@
  			<version>1.0.19</version>
 		</dependency>
 		
+		<dependency>  
+         <groupId>org.springframework.boot</groupId>  
+         <artifactId>spring-boot-starter-thymeleaf</artifactId>  
+		</dependency>  
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>springloaded</artifactId>
+			<version>1.2.6.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>net.sourceforge.nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+			<version>1.9.22</version>
+		</dependency>
+
+		<dependency>
+  		  <groupId>org.springframework.boot</groupId>
+    	  <artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+    	  <version>1.3.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc-portlet</artifactId>
+		</dependency>
+		
+		<dependency>  
+    		<groupId>com.github.penggle</groupId>  
+    		<artifactId>kaptcha</artifactId>  
+    		<version>2.3.2</version>  
+		</dependency>  
 	</dependencies>
 
 	<build>
